--- a/EscalArt/static/escalArt/css/home.css
+++ b/EscalArt/static/escalArt/css/home.css
@@ -10,6 +10,10 @@ html {
     font-size: 16px;
 }
 
+.linea_2 {
+    height: 4px;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
@@ -25,6 +29,7 @@ body {
 
 .titulo {
     text-align: center;
+    padding: 10px 0;
 }
 
 
@@ -129,11 +134,18 @@ body {
 
 .username {
     padding: 20px 10px;
+    text-transform: lowercase;
+    text-decoration: none;
+}
+
+.username:first-letter {
+    text-transform: uppercase;
 }
 
 #descripcion-post {
     font-size: 1em;
     margin-bottom: 0;
+    color: #000;
 }
 
 .titulo-post {
@@ -141,6 +153,7 @@ body {
     width: 100%;
     align-self: flex-end;
     text-align: end;
+    text-transform: uppercase;
 }
 
 .post-container {
@@ -148,7 +161,7 @@ body {
 }
 
 .post {
-    box-shadow: 0 1px 6px 1 px rgba(0, 0, 0, .1);
+    box-shadow: 2px 2px 5px #999;
     padding-bottom: 10px;
 }
 
@@ -248,6 +261,7 @@ body {
     margin: 0 40px;
     position: relative;
     overflow: hidden;
+    border-radius: 20px;
 }
 
 .contenido-img img {
@@ -257,12 +271,13 @@ body {
     border: 3px solid #E5E1DC;
     border-radius: 20px;
     object-fit: cover;
-    transition: 0.5s;
+    /* transition: 0.5s; */
 }
 
-.contenido-img img:hover {
+
+/* .contenido-img img:hover {
     transform: scale(1.1);
-}
+} */
 
 .contenido-icono {
     position: relative;
@@ -287,6 +302,29 @@ body {
 
 .contenido-icono i:hover {
     color: #646069;
+}
+
+.c-img {
+    position: relative;
+    /* display: flex; */
+    align-items: center;
+}
+
+.c-img .txt {
+    text-align: center;
+    position: absolute;
+}
+
+.c-img .txt p {
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: #fff;
+}
+
+.c-img h1 {
+    font-size: 2rem;
+    padding: 10px 20px;
+    color: #fff;
 }
 
 @media (max-width:750px) {
@@ -314,6 +352,121 @@ body {
 }
 
 
+/* Questions */
+
+
+/* .questions {
+    text-align: center;
+}
+
+.questions__container {
+    display: grid;
+    gap: 2em;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.questions__padding {
+    padding: 0;
+    transition: padding .3s;
+    border: 1px solid #5454D4;
+    border-radius: 6px;
+}
+
+.questions__padding--add {
+    padding-bottom: 30px;
+}
+
+.questions__answer {
+    padding: 0 30px 0;
+    overflow: hidden;
+}
+
+.questions__title {
+    text-align: left;
+    display: flex;
+    font-size: 20px;
+    padding: 30px 0 30px;
+    cursor: pointer;
+    color: var(--color-title);
+    justify-content: space-between;
+}
+
+.questions__arrow {
+    border-radius: 50%;
+    background-color: var(--color-title);
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    margin-left: 10px;
+    transition: transform .3s;
+}
+
+.questions__arrow--rotate {
+    transform: rotate(180deg);
+}
+
+.questions__show {
+    text-align: left;
+    height: 0;
+    transition: height .3s;
+    margin-bottom: 0;
+}
+
+.questions__img {
+    display: block;
+    height: 50px;
+    width: 50px;
+}
+
+.questions__copy {
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+@media(max-width:800px) {
+    .questions__copy {
+        width: 100%;
+    }
+}
+
+@media (max-width:600px) {
+    .questions__title {
+        font-size: 1rem;
+    }
+} */
+
+
+/* questions diseño 2 */
+
+.contenedor-CNE {
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.questions {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.questions>img {
+    width: 550px;
+}
+
+.textos-questions h1 {
+    font-size: 50px;
+}
+
+
 /* Cards de presentacion perifl de artistas mas seguidos */
 
 .body-cards {
@@ -322,7 +475,7 @@ body {
     justify-content: center;
 }
 
-.card {
+.card-presentacion {
     position: relative;
     width: 250px;
     height: 350px;
@@ -332,11 +485,11 @@ body {
     transition: 0.5s ease;
 }
 
-.card:hover {
+.card-presentacion:hover {
     margin-top: 10px;
 }
 
-.card .card-content {
+.card-presentacion .card-content {
     position: relative;
     z-index: 100;
     width: 100%;
@@ -350,12 +503,12 @@ body {
     background: #fff;
 }
 
-.card .card-content .card-img {
+.card-presentacion .card-content .card-img {
     height: 50%;
     margin-bottom: 20px;
 }
 
-.card .card-content .card-img img {
+.card-presentacion .card-content .card-img img {
     position: relative;
     width: 150px;
     height: 150px;
@@ -364,7 +517,7 @@ body {
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
 }
 
-.card .card-content span {
+.card-presentacion .card-content span {
     position: absolute;
     width: 350px;
     height: 200px;
@@ -375,18 +528,18 @@ body {
     left: -100px;
 }
 
-.card .card-content h4 {
+.card-presentacion .card-content h4 {
     font-size: 18px;
     color: #1a1919;
     margin-bottom: 5px;
 }
 
-.card .card-content h6 {
+.card-presentacion .card-content h6 {
     font-size: 13px;
     color: #86C332;
 }
 
-.card .card-content p {
+.card-presentacion .card-content p {
     font-size: 13px;
     color: #1a161f;
     margin-top: 10px;
@@ -406,7 +559,7 @@ body {
 
 /* links */
 
-.card .links {
+.card-presentacion .links {
     position: absolute;
     z-index: 90;
     width: 50px;
@@ -453,29 +606,29 @@ body {
     color: #fffb00;
 }
 
-.card:hover .links {
+.card-presentacion:hover .links {
     right: -50px;
     border-radius: 0 10px 10px 0;
 }
 
-.card .links a {
+.card-presentacion .links a {
     font-size: 20px;
     color: #646069;
 }
 
-.card .links a:nth-child(1):hover {
+.card-presentacion .links a:nth-child(1):hover {
     color: #bfc0c2;
 }
 
-.card .links a:nth-child(2):hover {
+.card-presentacion .links a:nth-child(2):hover {
     color: #0158ca;
 }
 
-.card .links a:nth-child(3):hover {
+.card-presentacion .links a:nth-child(3):hover {
     color: #5D2770;
 }
 
-.card .links a:nth-child(4):hover {
+.card-presentacion .links a:nth-child(4):hover {
     color: #a80e56;
 }
 
@@ -490,7 +643,7 @@ body {
         justify-content: center;
         justify-items: center;
     }
-    .card {
+    .card-presentacion {
         margin: 10px 0;
     }
 }
@@ -548,6 +701,7 @@ body {
     margin-bottom: 20px;
     line-height: 1.5;
     font-weight: 300;
+    color: #000;
 }
 
 .about__paragraph span {
