--- a/EscalArt/static/escalArt/css/home.css
+++ b/EscalArt/static/escalArt/css/home.css
@@ -354,98 +354,9 @@ body {
 
 /* Questions */
 
-
-/* .questions {
-    text-align: center;
-}
-
-.questions__container {
-    display: grid;
-    gap: 2em;
-    padding-top: 50px;
-    padding-bottom: 100px;
-}
-
-.questions__padding {
-    padding: 0;
-    transition: padding .3s;
-    border: 1px solid #5454D4;
-    border-radius: 6px;
-}
-
-.questions__padding--add {
-    padding-bottom: 30px;
-}
-
-.questions__answer {
-    padding: 0 30px 0;
-    overflow: hidden;
-}
-
-.questions__title {
-    text-align: left;
-    display: flex;
-    font-size: 20px;
-    padding: 30px 0 30px;
-    cursor: pointer;
-    color: var(--color-title);
-    justify-content: space-between;
-}
-
-.questions__arrow {
-    border-radius: 50%;
-    background-color: var(--color-title);
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: flex-end;
-    margin-left: 10px;
-    transition: transform .3s;
-}
-
-.questions__arrow--rotate {
-    transform: rotate(180deg);
-}
-
-.questions__show {
-    text-align: left;
-    height: 0;
-    transition: height .3s;
-    margin-bottom: 0;
-}
-
-.questions__img {
-    display: block;
-    height: 50px;
-    width: 50px;
-}
-
-.questions__copy {
-    width: 60%;
-    margin: 0 auto;
-    margin-bottom: 30px;
-}
-
-@media(max-width:800px) {
-    .questions__copy {
-        width: 100%;
-    }
-}
-
-@media (max-width:600px) {
-    .questions__title {
-        font-size: 1rem;
-    }
-} */
-
-
-/* questions diseño 2 */
-
 .contenedor-CNE {
     width: 90%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: auto;
     overflow: hidden;
 }
@@ -460,10 +371,62 @@ body {
 
 .questions>img {
     width: 550px;
+    border-radius: 50%;
+    border: 3px solid #F5F5F5;
 }
 
 .textos-questions h1 {
-    font-size: 50px;
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+
+.textos-questions {
+    margin: 0 0 0 30px;
+}
+
+.textos-questions p {
+    font-weight: 100;
+    margin-top: 14px;
+    color: #5D6678;
+    margin-right: 20px;
+}
+
+.textos-questions a {
+    margin: 20px 0 0 0;
+    width: 130px;
+    display: inline-block;
+    background: #86C332;
+    text-align: center;
+    color: #fff;
+    padding: 12px 0;
+    text-decoration: none;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 14px;
+    border-radius: 5px;
+    box-shadow: 0 8px 32px rgba(31, 222, 130, .46);
+    text-decoration: none;
+}
+
+.textos-questions a:hover {
+    background: #659523;
+    color: #fff;
+}
+
+.btn-question-txt {
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.linea-separadora {
+    width: 50%;
+    height: 4px;
+    background: #86C332;
+    display: block;
+    margin: 5px 0;
+    text-align: center;
 }
 
 
