--- a/EscalArt/templates/escalArt/index.html
+++ b/EscalArt/templates/escalArt/index.html
@@ -43,7 +43,7 @@
 
     <div class="scrol"></div>
 
-
+    <!--Publicaciones mas vistas-->
     <h1 class="titulo">Lo mas visto!</h1>
     <section class="section-chips">
         <div class="chips-container">
@@ -116,69 +116,20 @@
 
 
     </section>
-    <!--Imagenes Diseño-->
-    <!-- <section class="sector-imagenes">
-        <div class="contenido-img c-img">
-            <img src="{% static 'EscalArt/img/escribir-laptop.gif' %}" alt="">
-            <div class="txt">
-                <h1>Conoce nuestra Historia</h1>
-                <p>¿Quieres saber como iniciamos todo desde el inicio hasta la actualidad?</p>
-            </div>
-            <div class="contenido-icono">
-                <i src="#" class="fa-solid fa-circle-arrow-right"></i>
-            </div>
-        </div>
-        <div class="contenido-img c-img">
-            <img src="{% static 'EscalArt/img/personas-pensando.jpg' %}" alt="">
-            <div class="txt">
-                <h1>Nuestro Equipo de Trabajo</h1>
-                <p>lorem10</p>
-            </div>
-            <div class="contenido-icono">
-                <i src="#" class="fa-solid fa-circle-arrow-right"></i>
-            </div>
-        </div>
-    </section>-->
-    <!-- <section class="questions container">
-        <h2 class="subtitle">¡Conocenos!</h2>
-        <p class="questions__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, porro doloribus neque perspiciatis sapiente fuga.</p>
-
-        <section class="questions__container">
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">¿Te gustaria conocer nuesta historia?
-                        <span class="questions__arrow">
-                                <img src="{% static 'EscalArt/img/flecha_pequeña.jpg' %}" class="questions__img">
-                            </span>
-                    </h3>
-                    <p class="questions__show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque? Lorem ipsum,
-                        dolor sit amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque?</p>
-                </div>
-            </article>
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">¡Conoce a nuestro Equipo!
-                        <span class="questions__arrow">
-                                <img src="{% static 'EscalArt/img/flecha_pequeña.jpg' %}" class="questions__img">
-                            </span>
-                    </h3>
-                    <p class="questions__show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque? Lorem ipsum,
-                        dolor sit amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque?</p>
-                </div>
-            </article>
-        </section>
-    </section> -->
-
+    <div class="linea-separadora"></div>
     <!--  Conoce a nuestro Equipo  -->
     <section class="questions contenedor-CNE">
         <section class="textos-questions">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, corporis?</p>
-            <a href="#">Conocenos</a>
+            <h1>Conoce a nuestro equipo y nuestra Historia.</h1>
+            <p>Podras conocer nuestra historia de como empezamos a crear nuestro sitio web desde 0, ademas de como estamos en al actualidad y de ser uno de los sitios mas grandes de Diseño Digital/Arte. </p>
+            <div class="btn-question-txt">
+                <a href="{% url 'sobre_nosotros' %}">Conocenos</a>
+            </div>
         </section>
         <img src="{% static 'EscalArt/img/equipo-nosotros.jpg' %}" alt="">
 
     </section>
+    <div class="linea-separadora"></div>
 
 
 
