--- a/EscalArt/templates/escalArt/Perfil_Artista.html
+++ b/EscalArt/templates/escalArt/Perfil_Artista.html
@@ -387,7 +387,7 @@
                     </button>
                 </div>
                 <div class="publicacion-bottom_2">
-                    <input type="submit" name="publicar" value="Publicar...">
+                    <input type="submit" name="publicar" value="Publicar">
                     <input type="reset" value="Limpiar">
                 </div>
             </form>
@@ -481,14 +481,13 @@
     }
     
     .publicacion-top {
-        padding-top: 0;
         margin-top: -1px;
         border-radius: 14px 14px 0 0;
     }
     
     #emoji-post {
         position: absolute;
-        margin-left: 18%;
+        margin-left: 13%;
         top: 180px;
     }
     
@@ -504,7 +503,7 @@
         resize: none;
         height: 6em;
         top: 100px;
-        left: 25%;
+        left: 20%;
     }
     
     #imagen-post {
